[tool.poetry]
name = "pre-commit-test"
version = "0.1.0"
description = ""
authors = ["AkamineTaito"]
readme = "README.md"
packages = [{ include = "PRStatusChecker" }]

[tool.poetry.dependencies]
python = "3.10"

[tool.poetry.scripts]
pr-status-check = 'PRStatusChecker.pr_status_checker:PRStatusChecker.main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
